--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+#root {
+    display: flex;    
+    align-items: center;
+}
+
 .App {
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
 
