--- a/src/components/UI/page_name/PageName.module.css
+++ b/src/components/UI/page_name/PageName.module.css
@@ -1,7 +1,9 @@
 .page_name {
     display: flex;
     justify-content: space-between;
-    max-width: 66vw;
+    max-width: 100%;
+    align-items: center;
+    padding-bottom: 30px;
 }
 
 .text {
@@ -10,6 +12,8 @@
     font-size: 24px;
 }
 
-.line {
-    width: 27vw;
+.line img {
+    width: 40%; 
+    height: 4px; 
+    /* object-fit: cover;  */
 }
