--- a/src/components/common_page_elements/main/Main.module.css
+++ b/src/components/common_page_elements/main/Main.module.css
@@ -1,5 +1,6 @@
 .main{
     min-height: calc(100vh - 180px);
-    padding: 100px 17vw 80px;
-    background: #E1E1E1;
+    width: 100vw;
+    padding: 100px 80px;
+    align-self: center;
 }
