--- a/src/components/common_page_elements/main/Main.module.css
+++ b/src/components/common_page_elements/main/Main.module.css
@@ -1,6 +1,6 @@
 .main{
     min-height: calc(100vh - 180px);
-    width: 100vw;
+    width: 100%;
     padding: 100px 80px;
     align-self: center;
 }
